[project]
name = "medgemma-contest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ssghost", email = "ssprof0@gmail.com"},
]
dependencies = ["numpy>=2.2.6", "pandas>=2.3.3", "scikit-learn>=1.7.2", "jupyterlab>=4.5.3", "matplotlib>=3.10.8", "seaborn>=0.13.2", "file:///${PROJECT_ROOT}/torch-2.2.2-cp310-none-macosx_10_9_x86_64.whl", "transformers>=5.0.0", "accelerate>=1.12.0", "peft>=0.18.1", "trl>=0.27.1", "langchain>=1.2.8", "chromadb>=1.4.1", "sentence-transformers>=5.2.2", "kaggle>=1.7.4.5", "python-dotenv>=1.2.1"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
