[project]
name = "medgemma-contest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ssghost", email = "ssprof0@gmail.com"},
]

dependencies = [
    "numpy<2.0.0",
    "pandas",
    "scikit-learn",
    "jupyterlab",
    "matplotlib",
    "seaborn",
    "torch==2.2.2",
    "transformers>=4.38.0",
    "accelerate",
    "peft",
    "trl",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.1.2",
    "langchain-huggingface>=0.1.0",
    "langgraph>=1.0.8",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "kaggle",
    "python-dotenv",
    "huggingface-hub",
    "hf-transfer",
    "sentencepiece",
    "gguf",
    "protobuf",
    "pypdf",
    "streamlit>=1.54.0"
]

requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false